kernel/.err
In file included from src/elf/elf.c:1:
./include/common.h:13:17: error: redeclaration of C++ built-in type 'bool' [-fpermissive]
 typedef uint8_t bool;
                 ^~~~
src/elf/elf.c: In function 'uint32_t loader()':
src/elf/elf.c:27:8: error: invalid conversion from 'void*' to 'Elf32_Ehdr*' [-fpermissive]
  elf = (void *)buf;
        ^~~~~~~~~~~
src/elf/elf.c:35:19: warning: pointer of type 'void *' used in arithmetic [-Wpointer-arith]
  ph = (void *)elf + elf->e_phoff;
       ~~~~~~~~~~~~^~~~~~~~~~~~~~
src/elf/elf.c:35:19: error: invalid conversion from 'void*' to 'Elf32_Phdr*' [-fpermissive]
src/elf/elf.c:49:13: error: invalid conversion from 'void*' to 'uint8_t*' {aka 'unsigned char*'} [-fpermissive]
    ide_read((void *)paddr,ELF_OFFSET_IN_DISK+ph->p_offset,ph->p_filesz);
             ^~~~~~~~~~~~~
src/elf/elf.c:13:15: note:   initializing argument 1 of 'void ide_read(uint8_t*, uint32_t, uint32_t)'
 void ide_read(uint8_t *, uint32_t, uint32_t);
               ^~~~~~~~~
